winter/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-app
  labels:
    name: worker-app
    app: demo-voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-app
  template:
    metadata:
      labels:
        app: worker-app
    spec:    
      containers:
      - name: worker-app
        image: docker.io/burrsutter/worker:java.1
        imagePullPolicy: Always
