winter/ingress-3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: vote.localdev.me
    http:
      paths:
      - backend:
          service:
            name: voting-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: results.localdev.me
    http:
      paths:
      - backend:
          service:
            name: result-service
            port:
              number: 80
        path: /
        pathType: Prefix
