winter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: catvdog.info
    http:
      paths:
      - pathType: Prefix
        path: /vote
        backend:
          service:
            name: voting-service
            port:
              number: 30004
      - pathType: Prefix
        path: /result
        backend:
          service: 
            name: result-service
            port:
              number: 30005
